refactor: sender component compact class (#109)
* refactor: style variables and compact  theme

* fix: cancel stop button cursor wait effect

--- a/packages/components/src/sender/index.less
+++ b/packages/components/src/sender/index.less
@@ -283,7 +283,7 @@
 
   // 字数限制
   &__word-limit {
-    font-size: var(--tr-sender-font-size);
+    font-size: var(--tr-sender-base-font-size);
     font-weight: 400;
     line-height: 22px;
     text-align: left;
@@ -699,7 +699,6 @@
     box-sizing: border-box;
     height: var(--tr-action-buttons-cancel-height);
     gap: var(--tr-action-buttons-cancel-gap);
-    cursor: wait;
     font-size: var(--tr-action-buttons-cancel-font-size);
     border-radius: var(--tr-action-buttons-cancel-border-radius);
     padding: var(--tr-action-buttons-cancel-padding);
