fix: style toggle issues

--- a/packages/components/src/sender/index.less
+++ b/packages/components/src/sender/index.less
@@ -76,7 +76,7 @@
   .tiny-textarea__inner {
     font-size: var(--tr-sender-input-font-size);
     border: none;
-    min-height: var(--tr-sender-textarea-min-height); // 最小高度与单行保持一致
+    min-height: var(--tr-sender-textarea-min-height) !important; // 最小高度与单行保持一致
     padding: 0;
     background-color: var(--tr-sender-bg-color);
     color: var(--tr-sender-text-color);
