--- a/packages/components/src/sender/vars.less
+++ b/packages/components/src/sender/vars.less
@@ -231,6 +231,7 @@
   --tr-sender-input-font-size: var(--tr-sender-compact-font-size);
   --tr-sender-input-line-height: var(--tr-sender-compact-line-height);
   --tr-sender-input-height: var(--tr-sender-compact-input-height);
+  --tr-sender-textarea-min-height: var(--tr-sender-compact-line-height);
 
   // 覆盖圆角和图标尺寸
   --tr-sender-input-radius: var(--tr-sender-compact-input-radius);
